# SkpStuff

./: .gitignore  README.md  SkpStuff.sln
h5/svelte/routeing/: package-lock.json  package.json
round2/Rust/command_line_app/: Cargo.toml
round2/Rust/druid_ui/: Cargo.toml
round2/Rust/egui_ui/: Cargo.toml
round2/Rust/egui_ui/examples/: hello.rs  result_test.rs  test.rs
round2/Rust/egui_ui/src/: anime_fetch.rs  home_fetch.rs  main.rs
round2/Rust/fileExplorer/: Cargo.toml  package-lock.json  package.json
round2/Rust/hello-rust/: Cargo.toml
round2/Rust/iced_ui/: Cargo.toml
round2/Rust/svelte-rust/rust/: Cargo.toml
round2/Rust/svelte-rust/rust/src/: lib.rs
round2/Rust/tauri-svelte/: package-lock.json  package.json
round2/Rust/yew-app/: Cargo.toml  index.html
round2/apps/myapp/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  _Imports.razor  myapp.csproj  myapp.sln
round2/web/ContainerTest/: clipPath.css  clipPath.html  has.html  index.html  main.css  style.css
round2/web/anime/: package-lock.json  package.json
round2/web/anime-next/: package-lock.json  package.json
round2/web/animeSolid/: package-lock.json  package.json  tsconfig.json
round2/web/animeSvelte/: package-lock.json  package.json
round2/web/calendar/: package-lock.json  package.json
round2/web/container-test/: package-lock.json  package.json
round2/web/drag-drop/: package-lock.json  package.json
round2/web/solidTest/: package-lock.json  package.json
round2/web/state-machine/: package-lock.json  package.json
round2/web/svelteTest/: package.json  (+1 more)
(+292 files in other folders)
