[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.63"
serde = "1.0.164"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version= "0.2.63", features = ["serde-serialize"] }
